FlightPath 5.x Changelog
========================

2019-02-13
  Enforced integer constraint when adding a new student user (for is_disabled and is_active).
  
  Fixed bug in advise.module which was preventing alphabetic CWIDs from working.
  

2019-02-09
  Changed cumulative_hours in students table (as well as a couple other fields) to be
  varchar(20) instead of varchar(5).  This is because at only 5 characters, students
  with 123.45 hours were violating the constraint on the table, and causing routines
  to die.


2018-12-31
  Made small changes to advise.module and blank_degrees.module, so that if a blank degree plan
  is loaded with prereqs, they are not blocked.  Also, to make it easier for custom modules
  to use req_by_degree_id instead of blank_degree_id, if req is set.

  Made a change to _FlightPath.php, when marking substitutions as outdated.  Changed
  a simple "else" to an "else if" to make sure some logic doesn't get executed more
  than necessary.  (Thanks to Logan Buth #2316)
  
  Various QOL issues and fixes.  Thanks to Logan Buth #2488.
  

2018-12-18
  Added new hook: hook_alter_currently_advising_box.  This allows modules to modify or add to the "currently
  advising" box, which appears at the top of the screen when a student is selected for advising.


2018-12-15
  Modified core's display of the Urgent Message screen, to better allow other modules
  to make modifications.


2018-11-26
  Fixed bug where groups split over more than one semester block were not having courses assigned
  to them correctly.  Partially due to them not having req_by_degree_id set.


2018-11-13
  Added extra data to $form_state, when duplicating an entire year's worth of data.
  
  Added fix for issue #2455, thanks to Logan Buth.  This deals with repeatable courses still appearing
  in groups, even though a setting was set saying they should be advised once enrolled. 
