@@ -1,6 +1,12 @@
 FlightPath 5.x Changelog
 ========================
 
+2019-02-14
+  Added new setting to calculate & show GPA for each pie chart on a student's degree plan.
+
+  Fixed a bug in the Major Student Progress report (in the stats module).
+  
+
 2019-02-13
   Enforced integer constraint when adding a new student user (for is_disabled and is_active).
   
